<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">wallabag!</string>
    <string name="app_name">wallabag</string>
    <string name="bag_it">Bag it!</string>
    <string name="author">GAULUPEAU Jonathan - 2013\nErick Pires - 2014</string>
    <string name="instructions">To save a web page to wallabag, open the page in a browser then tap <i>Share</i> and tap on <i>Bag it!</i>.\nYou could then see your wallabag login page.\nAnd it\'s done!\nMore infos about wallabag at wallabag.org.</string>
    <string name="btnDone">Save</string>
    <string name="which_browser">Which browser would you like to use?</string>
    <string name="authorSite">http://cv.gaulupeau.fr</string>
    <string name="url_label"><b>Your wallabag URL:</b></string>
    <string name="url_help">Examples:\n<i>https://demo.wallabag.org</i>\n<i>https://framabag.org/u/example</i></string>
    <string name="btnGetPost">List articles</string>
    <string name="btnSync">Synchronize</string>
    <string name="btnMarkRead">Mark as read</string>
    <string name="menuSettings">Settings</string>
    <string name="menuShowAll">Show all</string>
    <string name="menuWipeDb">Wipe database</string>
    <string name="txtSyncDone">Synchronize done</string>
    <string name="txtSyncFailed">Synchronize failed</string>
    <string name="txtNetOffline">Check internet connectivity</string>
    <string name="txtConfigNotSet">Please configure the app before syncing</string>
    <string name="txtGlobalToken"><b>API global token:</b></string>
    <string name="txtAPIUsername"><b>Your user ID (user_id in Feed URL):</b></string>
    <string name="txtAPIToken"><b>Your token (token in Feed URL):</b></string>
    <!-- <string name="unread_label">unread</string> -->
    <string name="refresh">Refresh</string>
    <string name="no_unread_articles">You have no unread articles</string>
    <string name="one_unread_article">You have 1 unread article</string>
    <string name="many_unread_articles">You have %d unread articles</string>
    <string name="marked_as_read">Article marked as read</string>
    <string name="marked_as_unread">Article marked as unread</string>
    <string name="wipe_data_base">Wiping database</string>
    <string name="sure">This operation will erase all the local database. Are you sure?</string>
    <string name="delete_account_info">Also delete account info</string>
    <string name="yes">Yes</string>
    <string name="no">No</string> 
    <string name="marked_as_fav">Article added to your Favorites</string>
    <string name="marked_as_not_fav">Article removed from your Favorites</string>
    <string name="fav_title">Toggle favorite</string>
    <string name="read_title">Mark as read</string>
    <string name="unread_title">Mark as unread</string>
    <string name="no_articles">You have no articles</string>
    <string name="share_title">Share</string>
    <string name="general">General</string>
    <string name="look_and_feel">Look and feel</string>
    <string name="account">Account</string>
    <string name="about">About</string>
    <string name="first_page">Set First Page</string>
    <string name="dark_theme">Use dark theme</string>
    <string name="font_size">Font size</string>
    <string name="font_style">Font style</string>
    <string name="rotation">Screen orientation</string>
    <string name="immersive">Immersive mode</string>
    <string name="sans_serif">Sans serif</string>
    <string name="serif">Serif</string>
    <string name="dynamic">Dynamic</string>
    <string name="landscape">Landscape</string>
    <string name="portrait">Portrait</string>
    <string name="text_align">Text align</string>
    <string name="auto">Auto</string>
    <string name="center">Center</string>
    <string name="justified">Justified</string>
    <string name="keep_screen_on">Keep screen always on</string>
    <string name="sort">Sort</string>
    <string name="newer">Newers first</string>
    <string name="older">Olders first</string>
    <string name="alphabetical">Alphabetical order</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="fail_to_update">The app failed to update</string>
    <string name="all_text">All</string>
    <string name="unread_text">Unread</string>
    <string name="read_text">Read</string>
    <string name="favorites_text">Favorites</string>
    <string name="welcome">Welcome</string>
    <string name="choose_installation">What kind of installation do you use</string>
    <string name="framabag">Framabag</string>
    <string name="another_sever">Another sever</string>
    <string name="user_name">User name</string>
    <string name="user_id">User ID</string>
    <string name="token">Token</string>
    <string name="server_url">Server URL</string>
</resources>

