<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="30sp"
    android:paddingRight="30sp"
    android:paddingTop="15dp"
    android:scrollbarAlwaysDrawVerticalTrack="false"
    android:scrollbars="vertical" >

    <TextView
        android:id="@+id/pageUrl_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/url_label"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/article_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/url_help" />

    <EditText
        android:id="@+id/pocheUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textUri"
        android:linksClickable="false"
        android:maxLines="1"
        android:scrollHorizontally="false" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/txtAPIUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtAPIUsername"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/APIUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/txtAPIToken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtAPIToken"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/APIToken"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/toppadding"
        android:autoLink="web"
        android:clickable="false"
        android:paddingTop="5sp"
        android:scrollHorizontally="false"
        android:scrollbarAlwaysDrawVerticalTrack="false"
        android:text="@string/instructions" />

    <!--
             <Button
            android:id="@+id/btnDone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnDone" />
    -->

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author"
        android:textSize="12sp" />

</LinearLayout>