<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scroll"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="10sp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/defaultTopPadding"
            android:paddingLeft="@dimen/defaultSidePadding"
            android:paddingTop="@dimen/defaultTopPadding"
            android:text="@string/choose_installation"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RadioGroup
                android:id="@+id/radioGroupServerType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/radioFramabag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:paddingLeft="@dimen/defaultSidePadding"
                    android:text="@string/framabag" />

                <RadioButton
                    android:id="@+id/radioAnotherServer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/defaultSidePadding"
                    android:text="@string/another_sever" />
            </RadioGroup>
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_outer_padding_bottom"
            android:src="@drawable/divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.pixplicity.wallabag.ui.FloatLabelLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:floatLabelTextAppearance="@style/TextAppearance.Wallabag.FloatLabel" >

                <EditText
                    android:id="@+id/editTextServerUrl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:imeOptions="actionNext"
                    android:inputType="textUri"
                    android:nextFocusDown="@+id/editTextUsername"
                    android:singleLine="true"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </com.pixplicity.wallabag.ui.FloatLabelLayout>

            <com.pixplicity.wallabag.ui.FloatLabelLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:floatLabelTextAppearance="@style/TextAppearance.Wallabag.FloatLabel" >

                <EditText
                    android:id="@+id/editTextUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/user_name"
                    android:imeOptions="actionNext"
                    android:inputType="text|textPersonName"
                    android:nextFocusDown="@+id/editTextUserID"
                    android:singleLine="true"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </com.pixplicity.wallabag.ui.FloatLabelLayout>
        </LinearLayout>

        <com.pixplicity.wallabag.ui.FloatLabelLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:floatLabelTextAppearance="@style/TextAppearance.Wallabag.FloatLabel" >

            <EditText
                android:id="@+id/editTextUserID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/user_id"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:nextFocusDown="@+id/editTextToken"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </com.pixplicity.wallabag.ui.FloatLabelLayout>
    </LinearLayout>

    <com.pixplicity.wallabag.ui.FloatLabelLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:floatLabelTextAppearance="@style/TextAppearance.Wallabag.FloatLabel" >

        <EditText
            android:id="@+id/editTextToken"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/token"
            android:inputType="textNoSuggestions"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </com.pixplicity.wallabag.ui.FloatLabelLayout>

</ScrollView>